--- a/frontend/src/css/global.css
+++ b/frontend/src/css/global.css
@@ -29,11 +29,19 @@ input {
   outline: none;
 }
 
+input.searchBar {
+  font-size: 1rem;
+  color: black;
+  padding: 0.5rem 1rem;
+  border: solid 1px #858585;
+  border-radius: 0.25rem;
+  margin-left: 1.5rem;
+}
+
 .navbar {
   width: 100%;
   position: fixed;
-  top: 2rem;
-  padding: 0 5rem;
+  top: 0;
   margin: auto;
   z-index: 10;
 }
@@ -44,22 +52,26 @@ input {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 1.5rem 3rem;
-  border-radius: 100px;
+  padding: 1.5rem 10rem;
   box-shadow: 0px 4px 25px 0px rgba(0, 0, 0, 0.07);
 }
 
 .logo {
-  font-size: 1.5rem;
-  font-weight: 700;
-  color: black;
-  text-decoration: none;
+  display: flex;
+  align-items: center;
+}
+
+.logo img {
+  width: 100%;
+  height: 2rem;
+  object-fit: contain;
+  object-position: center center;
 }
 
 .navLinksContainer {
   display: flex;
   align-items: center;
-  gap: 3rem;
+  gap: 2.5rem;
 }
 
 .navLink {
