--- a/frontend/src/css/dashboard.css
+++ b/frontend/src/css/dashboard.css
@@ -88,7 +88,7 @@
 .dashboardContainer {
   display: flex;
   width: 100%;
-  gap: 2rem;
+  gap: 1.5rem;
   margin-top: 1.5rem;
 }
 
@@ -151,6 +151,30 @@
 
 .dashboardContainer .sideNav .sideNavLinks .sideNavLink:hover {
   opacity: 0.7;
+}
+
+.dashboardContainer .dashboardContent {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  background: white;
+  border-radius: 0.5rem;
+  padding: 2rem 2.5rem;
+  height: fit-content;
+}
+
+.dashboardContainer .dashboardContent h2 {
+  font-size: 1.75rem;
+  font-weight: 600;
+  color: black;
+  margin-bottom: 1rem;
+}
+
+.dashboardContainer .dashboardContent .description {
+  font-size: 1rem;
+  font-weight: 400;
+  color: #858585;
+  margin-bottom: 1.5rem;
 }
 
 @media screen and (max-width: 992px) {
