--- a/frontend/src/css/dashboard.css
+++ b/frontend/src/css/dashboard.css
@@ -1,5 +1,5 @@
 .dashboardHeaderContainer {
-  background-image: url("../../public/vancouver-maps.png");
+  background-image: url("../../public/img/vancouver-maps.png");
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
