--- a/frontend/src/css/global.css
+++ b/frontend/src/css/global.css
@@ -53,13 +53,16 @@ input.searchBar {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 1.5rem 10rem;
+  padding: 1.5rem 2rem;
   box-shadow: 0px 4px 25px 0px rgba(0, 0, 0, 0.07);
 }
 
 .logo {
   display: flex;
   align-items: center;
+  font-size: 1.5rem;
+  font-weight: 700;
+  text-decoration: none;
 }
 
 .logo img {
