--- a/frontend/src/css/auth.css
+++ b/frontend/src/css/auth.css
@@ -14,7 +14,10 @@
 }
 
 .auth-container .auth-illustration .logo {
+  font-size: 1.5rem;
+  font-weight: 700;
   color: #fff;
+  text-decoration: none;
 }
 
 .auth-container .auth-illustration .auth-info {
