--- a/frontend/src/css/global.css
+++ b/frontend/src/css/global.css
@@ -53,21 +53,18 @@ input.searchBar {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 1.5rem 2rem;
+  padding: 1rem 7rem;
   box-shadow: 0px 4px 25px 0px rgba(0, 0, 0, 0.07);
 }
 
-.logo {
+.navLogo {
   display: flex;
   align-items: center;
-  font-size: 1.5rem;
-  font-weight: 700;
-  text-decoration: none;
 }
 
-.logo img {
+.navLogo img {
   width: 100%;
-  height: 2rem;
+  height: 3rem;
   object-fit: contain;
   object-position: center center;
 }
@@ -249,7 +246,7 @@ input.searchBar {
   .navContainer {
     padding: 1rem 3rem;
   }
-  .logo img {
+  .navLogo img {
     height: 1.75rem;
   }
   input.searchBar {
@@ -273,7 +270,7 @@ input.searchBar {
   .navContainer {
     padding: 1rem 2rem;
   }
-  .logo img {
+  .navLogo img {
     height: 1.5rem;
   }
   input.searchBar {
@@ -292,6 +289,9 @@ input.searchBar {
 
 @media screen and (max-width: 576px) {
   input.searchBar {
+    display: none;
+  }
+  .navLinksContainer {
     display: none;
   }
 }
