--- a/frontend/src/css/field.css
+++ b/frontend/src/css/field.css
@@ -44,10 +44,10 @@
   border: 1px solid #e0e0e0;
   border-radius: 0.25rem;
   transition: border-color 0.3s ease-in-out;
-  -webkit-transition: border-color ease-in-out 0.3s;
-  -moz-transition: border-color ease-in-out 0.3s;
-  -ms-transition: border-color ease-in-out 0.3s;
-  -o-transition: border-color ease-in-out 0.3s;
+  -webkit-transition: border-color 0.3s ease-in-out;
+  -moz-transition: border-color 0.3s ease-in-out;
+  -ms-transition: border-color 0.3s ease-in-out;
+  -o-transition: border-color 0.3s ease-in-out;
 }
 
 .accountForm .formGroup textarea {
