--- a/frontend/src/css/global.css
+++ b/frontend/src/css/global.css
@@ -31,10 +31,10 @@ input {
 }
 
 input.searchBar {
-  font-size: 1rem;
+  font-size: 0.9rem;
   color: black;
   padding: 0.5rem 1rem;
-  border: solid 1px #858585;
+  border: solid 1px #b9b9b9;
   border-radius: 0.25rem;
   margin-left: 1.5rem;
 }
@@ -64,7 +64,7 @@ input.searchBar {
 
 .navLogo img {
   width: 100%;
-  height: 3rem;
+  height: 2rem;
   object-fit: contain;
   object-position: center center;
 }
