fixed container mobile responsive styling

--- a/frontend/src/css/global.css
+++ b/frontend/src/css/global.css
@@ -374,7 +374,7 @@ input.searchBar {
   }
   #wrapper {
     padding: 0 3rem;
-    margin: 10vh auto 0;
+    margin: 10vh auto 3rem;
     min-height: 90vh;
   }
 }
