--- a/frontend/src/css/dashboard.css
+++ b/frontend/src/css/dashboard.css
@@ -142,7 +142,7 @@
 
 .dashboardContainer .sideNav .sideNavLinks .sideNavLink.active {
   color: var(--primaryColor);
-  background: rgba(73, 144, 226, 0.2);
+  background: rgba(73, 144, 226, 0.1);
   font-weight: 600;
 }
 
@@ -157,11 +157,12 @@
 .dashboardContainer .dashboardContent {
   display: flex;
   flex-direction: column;
-  width: 75%;
+  width: 100%;
   background: white;
   border-radius: 0.5rem;
   padding: 2rem 2.5rem;
   height: fit-content;
+  margin-bottom: 1.5rem;
 }
 
 .dashboardContainer .dashboardContent h2 {
@@ -175,7 +176,6 @@
   font-size: 1rem;
   font-weight: 400;
   color: #858585;
-  margin-bottom: 1.5rem;
 }
 
 .dashboardContainer .dashboardContent .flexHeader {
@@ -192,6 +192,167 @@
 .dashboardContainer .dashboardContent form .formBtnGroup {
   display: flex;
   gap: 1rem;
+}
+
+.dashboardContainer .discussionsContainer {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 0.75rem;
+}
+
+.dashboardContainer .discussionsContainer .discussionCard {
+  background: white;
+  padding: 2rem 2.5rem;
+  border-radius: 0.5rem;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.dashboardContainer .discussionsContainer .discussionCard .discussionCardHeader {
+  display: flex;
+}
+
+.dashboardContainer .discussionsContainer .discussionCard .discussionCardHeaderRight button {
+  border: none;
+  background-color: transparent;
+  padding: 0.5rem;
+  cursor: pointer;
+  border-radius: 5rem;
+}
+
+.dashboardContainer .discussionsContainer .discussionCard .discussionCardHeaderRight button:hover {
+  background-color: rgba(0, 0, 0, 0.05);
+}
+
+.dashboardContainer .discussionsContainer .discussionCard .userCont {
+  flex-grow: 1;
+}
+
+.dashboardContainer .discussionsContainer .discussionCard .userCont .name {
+  font-weight: 600;
+  padding-bottom: 0.25rem;
+}
+
+.dashboardContainer .discussionsContainer .discussionCard .userCont .date {
+  font-size: 0.8rem;
+  color: #858585;
+}
+
+.dashboardContainer .discussionsContainer .discussionCard .voteCont {
+  display: flex;
+  align-items: center;
+}
+
+.dashboardContainer .discussionsContainer .discussionCard .voteCont button {
+  border: none;
+  background-color: transparent;
+  padding: 0.5rem;
+  cursor: pointer;
+  border-radius: 5rem;
+}
+
+.dashboardContainer .discussionsContainer .discussionCard .voteCont button:hover {
+  background-color: rgba(0, 0, 0, 0.05);
+}
+
+.dashboardContainer .discussionsContainer .discussionCard .voteCont p {
+  color: #858585;
+  font-size: 0.8rem;
+  font-weight: 500;
+}
+
+.dashboardContainer .discussionsContainer .discussionCard .bodyHeader {
+  display: flex;
+  align-items: center;
+}
+
+.dashboardContainer .discussionsContainer .discussionCard .bodyHeader h3 {
+  flex-grow: 1;
+  font-weight: 600;
+}
+
+.dashboardContainer .discussionsContainer .discussionCard .bodyHeader p {
+  color: var(--primaryColor);
+  background-color: rgba(73, 144, 226, 0.1);
+  font-size: 0.9rem;
+  font-weight: 600;
+  padding: 0.5rem 1rem;
+  border-radius: 0.5rem;
+}
+
+.dashboardContainer .discussionsContainer .discussionCard .bodyContent {
+  padding-top: 0.5rem;
+  color: #858585;
+}
+
+.dashboardContainer .discussionsContainer .discussionCard .discussionCardFooter {
+  background-color: #f8f8f8;
+  padding: 1rem;
+  border-radius: 0.5rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.75rem;
+}
+
+.dashboardContainer .discussionsContainer .discussionCard .discussionCardFooter h4 {
+  color: rgba(0, 0, 0, 0.5);
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+}
+
+.dashboardContainer .discussionsContainer .discussionCard .discussionCardFooter h4 span {
+  margin-left: 0.5rem;
+  background-color: rgba(0, 0, 0, 0.4);
+  color: white;
+  padding: 0.1rem 0.5rem;
+  border-radius: 0.5rem;
+  font-size: 0.75rem;
+}
+
+.dashboardContainer .discussionsContainer .discussionCard .comments {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.dashboardContainer .discussionsContainer .discussionCard .comment {
+  background-color: white;
+  padding: 1rem;
+  border-radius: 0.5rem;
+}
+
+.dashboardContainer .discussionsContainer .discussionCard .commentHeader {
+  display: flex;
+  align-items: center;
+}
+
+.dashboardContainer .discussionsContainer .discussionCard .comment .content {
+  padding-top: 0.5rem;
+}
+
+.dashboardContainer .discussionsContainer .discussionCard .addComment {
+  display: flex;
+  gap: 0.5rem;
+}
+
+.dashboardContainer .discussionsContainer .discussionCard .addComment input {
+  width: 100%;
+  padding: 0.75rem 1rem;
+  border-radius: 0.5rem;
+  border: none;
+}
+
+.dashboardContainer .discussionsContainer .discussionCard .addComment button {
+  background-color: var(--primaryColor);
+  color: white;
+  padding: 0.5rem 1rem;
+  border-radius: 0.5rem;
+  border: none;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 992px) {
@@ -219,6 +380,7 @@
     gap: 1rem;
     margin-top: 1rem;
   }
+
   .dashboardContainer .sideNav {
     width: 30%;
     padding: 1rem 0.5rem;
@@ -231,7 +393,10 @@
     padding: 0.5rem 0.75rem;
   }
   .dashboardContainer .dashboardContent {
-    width: 70%;
+    padding: 1.5rem 1.5rem;
+    margin-bottom: 1rem;
+  }
+  .dashboardContainer .discussionsContainer .discussionCard {
     padding: 1.5rem 1.5rem;
   }
   .dashboardContainer .dashboardContent h2 {
@@ -274,7 +439,9 @@
     display: none;
   }
   .dashboardContainer .dashboardContent {
-    width: 100%;
+    padding: 1rem 1rem;
+  }
+  .dashboardContainer .discussionsContainer .discussionCard {
     padding: 1rem 1rem;
   }
 }
