--- a/frontend/src/css/dashboard.css
+++ b/frontend/src/css/dashboard.css
@@ -162,7 +162,45 @@
   border-radius: 0.5rem;
   padding: 2rem 2.5rem;
   height: fit-content;
-  margin-bottom: 1.5rem;
+  margin-bottom: 0.75rem;
+}
+
+.dashboardContainer .addDiscussion {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  background: white;
+  border-radius: 0.5rem;
+  padding: 2rem 2.5rem;
+  margin-bottom: 0.75rem;
+  gap: 0.75rem;
+}
+
+.dashboardContainer .addDiscussion .formHead {
+  display: flex;
+  gap: 0.75rem;
+}
+
+.dashboardContainer .addDiscussion img {
+  border-radius: 0.5rem;
+}
+
+.dashboardContainer .addDiscussion input {
+  padding: 0.75rem 1rem;
+  border-radius: 0.5rem;
+  border: none;
+  background-color: #f8f8f8;
+  flex-grow: 1;
+}
+
+.dashboardContainer .addDiscussion textarea {
+  padding: 0.75rem 1rem;
+  border-radius: 0.5rem;
+  border: none;
+  background-color: #f8f8f8;
+  flex-grow: 1;
+  font-size: 0.85rem;
+  resize: vertical;
 }
 
 .dashboardContainer .dashboardContent h2 {
