--- a/frontend/src/css/dashboard.css
+++ b/frontend/src/css/dashboard.css
@@ -174,6 +174,7 @@
   padding: 2rem 2.5rem;
   margin-bottom: 0.75rem;
   gap: 0.75rem;
+  border-left: 0.5rem solid var(--primaryColor);
 }
 
 .dashboardContainer .addDiscussion .formHead {
