--- a/frontend/src/css/dashboard.css
+++ b/frontend/src/css/dashboard.css
@@ -215,6 +215,7 @@
   font-size: 1rem;
   font-weight: 400;
   color: #858585;
+  margin-bottom: 1.5rem;
 }
 
 .dashboardContainer .dashboardContent .flexHeader {
