--- a/frontend/src/css/dashboard.css
+++ b/frontend/src/css/dashboard.css
@@ -323,6 +323,12 @@
   font-weight: 600;
 }
 
+.userInfo .userBadges {
+  padding: 1rem 1rem 0;
+  display: flex;
+  gap: 0.5rem;
+}
+
 .userInfo .about {
   font-style: italic;
 }
