--- a/frontend/src/css/field.css
+++ b/frontend/src/css/field.css
@@ -6,7 +6,6 @@ form {
 
 form .formRow {
   display: flex;
-  align-items: center;
   justify-content: space-between;
   gap: 1rem;
 }
@@ -87,6 +86,12 @@ form .formGroup textarea:focus {
 form .formGroup input.error,
 form .formGroup textarea.error {
   border-color: var(--errorColor);
+}
+
+form .formGroup .fieldErrorMsg {
+  font-size: 0.75rem;
+  font-weight: 400;
+  color: var(--errorColor);
 }
 
 @media (max-width: 992px) {
