--- a/frontend/src/css/field.css
+++ b/frontend/src/css/field.css
@@ -94,6 +94,19 @@ form .formGroup .fieldErrorMsg {
   color: var(--errorColor);
 }
 
+form .checkbox {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  font-size: 0.9rem;
+}
+
+form .checkbox input[type="checkbox"] {
+  width: 1.25rem;
+  height: 1.25rem;
+  cursor: pointer;
+}
+
 @media (max-width: 992px) {
   form .formRow {
     flex-direction: column;
