--- a/frontend/src/css/field.css
+++ b/frontend/src/css/field.css
@@ -106,6 +106,7 @@ form .checkbox input[type="checkbox"] {
   width: 1rem;
   height: 1rem;
   cursor: pointer;
+  margin-top: 1px;
 }
 
 @media (max-width: 992px) {
