Integrated voting functionality to the frontend

--- a/frontend/src/css/dashboard.css
+++ b/frontend/src/css/dashboard.css
@@ -501,6 +501,7 @@
 
 .dashboardContainer .discussionsContainer .discussionCard .addComment {
   display: flex;
+  flex-direction: row;
   gap: 0.5rem;
 }
 
